[package]
name = "strike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bevy_app = "0.11.0"
bevy_ecs = "0.11.0"
deref-derive = "0.1.0"
futures = "0.3.28"
regex = "1.9.3"
reqwest = { version = "0.11.18", features = ["serde_json", "json"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tungstenite = { version = "0.20.0", features = ["native-tls"] }
url = "2.4.0"

[dev-dependencies]
tokio = "1.29.1"
